vix/tests/checker-corpus/reject/unresolved-value.vix
fn main() -> Int {
    missing + 1
}
